--- a/public/test-semparar-fase1b.html
+++ b/public/test-semparar-fase1b.html
@@ -161,21 +161,21 @@
                 <div id="resultCompra"></div>
             </div>
 
-            <!-- Teste 6: Gerar e Enviar Recibo (FASE 2C - Corrigido) -->
+            <!-- Teste 6: Gerar e Enviar Recibo (FASE 2C) -->
             <div class="test-section">
-                <div class="test-title">Teste 6: Gerar e Enviar Recibo por WhatsApp 🆕 FASE 2C (Corrigido)</div>
-                <p style="color: #666; margin-bottom: 15px;">Gera o PDF e envia por WhatsApp/Email (seguindo fluxo do Progress)</p>
+                <div class="test-title">Teste 6: Gerar e Enviar Recibo por WhatsApp 🆕 FASE 2C</div>
+                <p style="color: #666; margin-bottom: 15px;">
+                    Gera o PDF e envia por WhatsApp/Email (seguindo fluxo do Progress)<br>
+                    <span style="color: #e74c3c; font-size: 12px;">⚠️ SOAP retorna dados da viagem (não PDF) → Node.js gera PDF e envia WhatsApp</span>
+                </p>
                 <div style="margin-bottom: 10px;">
-                    <input type="text" id="codViagemRecibo" placeholder="Código da Viagem" style="width: 300px; padding: 10px; margin-right: 10px;">
+                    <input type="text" id="codViagemRecibo" placeholder="Código da Viagem (ex: 91154383)" style="width: 300px; padding: 10px; margin-right: 10px;">
                     <br><br>
                     <input type="text" id="telefoneRecibo" placeholder="Telefone (5531988892076)" value="5531988892076" style="width: 300px; padding: 10px; margin-right: 10px;">
                     <input type="email" id="emailRecibo" placeholder="Email (opcional)" style="width: 300px; padding: 10px;">
                 </div>
                 <button onclick="gerarRecibo()" style="background: linear-gradient(135deg, #27ae60 0%, #229954 100%);">
                     📱 GERAR E ENVIAR POR WHATSAPP
-                </button>
-                <button onclick="obterRecibo()" style="background: linear-gradient(135deg, #9b59b6 0%, #8e44ad 100%);">
-                    📄 APENAS BAIXAR PDF
                 </button>
                 <div id="resultRecibo"></div>
             </div>
@@ -524,67 +524,6 @@
         document.getElementById('placaCompra').addEventListener('input', function(e) {
             e.target.value = e.target.value.toUpperCase();
         });
-
-        // FASE 2C - Obter Recibo PDF
-        async function obterRecibo() {
-            const result = document.getElementById('resultRecibo');
-            const codViagem = document.getElementById('codViagemRecibo').value.trim();
-
-            if (!codViagem) {
-                result.innerHTML = '<div class="error">❌ ERRO: Informe o código da viagem</div>';
-                return;
-            }
-
-            result.innerHTML = '⏳ Obtendo recibo...';
-
-            try {
-                const response = await fetch(`${API_BASE}/obter-recibo`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ cod_viagem: codViagem })
-                });
-
-                const data = await response.json();
-
-                if (data.success) {
-                    // Convert base64 to blob and download
-                    const pdfBase64 = data.data.recibo_pdf;
-                    const pdfSizeKB = (data.data.pdf_size_bytes / 1024).toFixed(2);
-
-                    // Create blob from base64
-                    const byteCharacters = atob(pdfBase64);
-                    const byteNumbers = new Array(byteCharacters.length);
-                    for (let i = 0; i < byteCharacters.length; i++) {
-                        byteNumbers[i] = byteCharacters.charCodeAt(i);
-                    }
-                    const byteArray = new Uint8Array(byteNumbers);
-                    const blob = new Blob([byteArray], { type: 'application/pdf' });
-
-                    // Create download link
-                    const url = window.URL.createObjectURL(blob);
-                    const a = document.createElement('a');
-                    a.href = url;
-                    a.download = `recibo_${codViagem}.pdf`;
-                    document.body.appendChild(a);
-                    a.click();
-                    window.URL.revokeObjectURL(url);
-                    document.body.removeChild(a);
-
-                    result.innerHTML = `
-                        <div class="success">
-                            ✅ RECIBO BAIXADO COM SUCESSO!<br>
-                            📄 Arquivo: recibo_${codViagem}.pdf<br>
-                            📦 Tamanho: ${pdfSizeKB} KB<br>
-                            📊 Status: ${data.data.status} - ${data.data.status_mensagem}
-                        </div>
-                    `;
-                } else {
-                    result.innerHTML = `<div class="error">❌ ERRO: ${data.message || data.data.error}</div>`;
-                }
-            } catch (error) {
-                result.innerHTML = `<div class="error">❌ ERRO: ${error.message}</div>`;
-            }
-        }
 
         // FASE 2C - Gerar e Enviar Recibo por WhatsApp/Email
         async function gerarRecibo() {
