--- a/public/test-semparar-fase1b.html
+++ b/public/test-semparar-fase1b.html
@@ -97,6 +97,31 @@
 </head>
 <body>
     <div class="container">
+        <!-- Card de Login -->
+        <div class="card" id="loginCard" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
+            <h2 style="color: white; margin-bottom: 20px;">🔐 Autenticação Laravel Sanctum</h2>
+            <p style="color: white; margin-bottom: 15px;">
+                <strong>Status:</strong> <span id="authStatus">❌ Não autenticado</span>
+            </p>
+            <div id="loginForm" style="display: block;">
+                <input type="email" id="loginEmail" placeholder="Email (admin@ndd.com)" value="admin@ndd.com"
+                    style="width: 100%; padding: 12px; margin-bottom: 10px; border-radius: 5px; border: none;">
+                <input type="password" id="loginPassword" placeholder="Senha" value="123456"
+                    style="width: 100%; padding: 12px; margin-bottom: 10px; border-radius: 5px; border: none;">
+                <button onclick="fazerLogin()" style="background: white; color: #f5576c; font-weight: bold;">
+                    🔓 FAZER LOGIN
+                </button>
+            </div>
+            <div id="logoutArea" style="display: none;">
+                <p style="color: white; margin-bottom: 10px;">
+                    👤 Logado como: <strong id="userEmail"></strong>
+                </p>
+                <button onclick="fazerLogout()" style="background: white; color: #f5576c; font-weight: bold;">
+                    🔒 SAIR
+                </button>
+            </div>
+        </div>
+
         <div class="card">
             <h1>🔌 Teste SemParar SOAP API - FASE 1B + 2A + 2B + 2C</h1>
             <p class="subtitle">Roteirização de Praças + Compra de Viagens + Recibo PDF</p>
@@ -199,8 +224,93 @@
 
     <script>
         const API_BASE = 'http://localhost:8002/api/semparar';
+        const AUTH_API = 'http://localhost:8002/api/auth';
         let lastPracaIds = [];
         let lastNomeRota = '';
+        let authToken = localStorage.getItem('auth_token') || null;
+
+        // Verificar auth ao carregar página
+        window.addEventListener('DOMContentLoaded', () => {
+            verificarAuth();
+        });
+
+        function verificarAuth() {
+            if (authToken) {
+                document.getElementById('authStatus').innerHTML = '✅ Autenticado';
+                document.getElementById('authStatus').style.color = '#28a745';
+                document.getElementById('loginForm').style.display = 'none';
+                document.getElementById('logoutArea').style.display = 'block';
+                const userEmail = localStorage.getItem('user_email') || 'Usuário';
+                document.getElementById('userEmail').textContent = userEmail;
+            } else {
+                document.getElementById('authStatus').innerHTML = '❌ Não autenticado';
+                document.getElementById('authStatus').style.color = '#e74c3c';
+                document.getElementById('loginForm').style.display = 'block';
+                document.getElementById('logoutArea').style.display = 'none';
+            }
+        }
+
+        async function fazerLogin() {
+            const email = document.getElementById('loginEmail').value.trim();
+            const password = document.getElementById('loginPassword').value.trim();
+
+            if (!email || !password) {
+                alert('❌ Informe email e senha');
+                return;
+            }
+
+            try {
+                const response = await fetch(`${AUTH_API}/login`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ email, password })
+                });
+
+                const data = await response.json();
+
+                if (response.ok && data.token) {
+                    authToken = data.token;
+                    localStorage.setItem('auth_token', authToken);
+                    localStorage.setItem('user_email', email);
+                    alert('✅ Login efetuado com sucesso!');
+                    verificarAuth();
+                } else {
+                    alert(`❌ Erro no login: ${data.message || 'Credenciais inválidas'}`);
+                }
+            } catch (error) {
+                alert(`❌ Erro: ${error.message}`);
+            }
+        }
+
+        async function fazerLogout() {
+            if (!authToken) return;
+
+            try {
+                await fetch(`${AUTH_API}/logout`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${authToken}`
+                    }
+                });
+            } catch (error) {
+                console.error('Erro ao fazer logout:', error);
+            }
+
+            authToken = null;
+            localStorage.removeItem('auth_token');
+            localStorage.removeItem('user_email');
+            alert('✅ Logout efetuado!');
+            verificarAuth();
+        }
+
+        function getHeaders(includeAuth = false) {
+            const headers = { 'Content-Type': 'application/json' };
+            if (includeAuth && authToken) {
+                headers['Authorization'] = `Bearer ${authToken}`;
+            }
+            return headers;
+        }
 
         async function testRotaSimples() {
             const result = document.getElementById('resultSimples');
@@ -420,6 +530,14 @@
             const codTrn = document.getElementById('codTrn').value.trim();
             const sPararRotID = document.getElementById('sPararRotID').value.trim();
 
+            // CORREÇÃO #7: Verificar autenticação
+            if (!authToken) {
+                result.className = 'result error';
+                result.innerHTML = '❌ ERRO: Você precisa fazer login para comprar viagens!<br>' +
+                                   '<small>Este endpoint agora requer autenticação (auth:sanctum)</small>';
+                return;
+            }
+
             if (!placa) {
                 result.className = 'result error';
                 result.innerHTML = '❌ Por favor, informe uma placa';
@@ -477,9 +595,10 @@
                     payload.res_compra = 'sistema';
                 }
 
+                // CORREÇÃO #7: Incluir token de autenticação
                 const response = await fetch(`${API_BASE}/comprar-viagem`, {
                     method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
+                    headers: getHeaders(true),  // true = incluir Authorization header
                     body: JSON.stringify(payload)
                 });
 
@@ -532,22 +651,30 @@
             const telefone = document.getElementById('telefoneRecibo').value.trim();
             const email = document.getElementById('emailRecibo').value.trim();
 
+            // CORREÇÃO #7: Verificar autenticação
+            if (!authToken) {
+                result.innerHTML = '<div class="result error">❌ ERRO: Você precisa fazer login para gerar recibos!<br>' +
+                                   '<small>Este endpoint agora requer autenticação (auth:sanctum)</small></div>';
+                return;
+            }
+
             if (!codViagem) {
-                result.innerHTML = '<div class="error">❌ ERRO: Informe o código da viagem</div>';
+                result.innerHTML = '<div class="result error">❌ ERRO: Informe o código da viagem</div>';
                 return;
             }
 
             if (!telefone) {
-                result.innerHTML = '<div class="error">❌ ERRO: Informe o telefone no formato 5531988892076</div>';
+                result.innerHTML = '<div class="result error">❌ ERRO: Informe o telefone no formato 5531988892076</div>';
                 return;
             }
 
             result.innerHTML = '⏳ Gerando recibo e enviando por WhatsApp...';
 
             try {
+                // CORREÇÃO #7: Incluir token de autenticação
                 const response = await fetch(`${API_BASE}/gerar-recibo`, {
                     method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
+                    headers: getHeaders(true),  // true = incluir Authorization header
                     body: JSON.stringify({
                         cod_viagem: codViagem,
                         telefone: telefone,
