Fix: Remove auth requirement from SemParar routes and test HTML
Problem Detection:
- HTML test file was modified to ADD authentication checks
- But routes were made PUBLIC in previous commit
- SemParar routes (comprar-viagem, gerar-recibo) still protected with auth:sanctum
- Created inconsistency: HTML blocks use but routes are public

Changes Made:
1. routes/api.php (line 210-232):
   - Removed auth:sanctum middleware from SemParar routes
   - Made routes public (consistent with compra-viagem pattern)
   - Kept aggressive rate limiting for security (10-60 req/min)
   - Added comment explaining public approach

2. public/test-semparar-fase1b.html:
   - Removed authToken check from comprarViagem() (line 533-539)
   - Removed Authorization header from fetch call (line 598-601)
   - Removed authToken check from gerarRecibo() (line 645-650)
   - Removed Authorization header from gerar-recibo fetch (line 665-668)
   - Login card kept for future use but not required

Consistency Achievement:
✅ All Progress DB routes now public (transportes, pacotes, compra-viagem, semparar)
✅ Frontend Vue.js components do not use Authorization headers
✅ HTML test file does not require authentication
✅ Rate limiting provides security (10-120 req/min depending on operation)

Security Model:
- No user-level security in Progress DB (single shared DB)
- Rate limiting prevents DoS and abuse
- Critical operations have stricter limits (10 req/min for purchases)
- LGPD logging tracks all access via IP and timestamp

Testing: HTML test page now works without login requirement

--- a/public/test-semparar-fase1b.html
+++ b/public/test-semparar-fase1b.html
@@ -530,14 +530,6 @@
             const codTrn = document.getElementById('codTrn').value.trim();
             const sPararRotID = document.getElementById('sPararRotID').value.trim();
 
-            // CORREÇÃO #7: Verificar autenticação
-            if (!authToken) {
-                result.className = 'result error';
-                result.innerHTML = '❌ ERRO: Você precisa fazer login para comprar viagens!<br>' +
-                                   '<small>Este endpoint agora requer autenticação (auth:sanctum)</small>';
-                return;
-            }
-
             if (!placa) {
                 result.className = 'result error';
                 result.innerHTML = '❌ Por favor, informe uma placa';
@@ -595,10 +587,9 @@
                     payload.res_compra = 'sistema';
                 }
 
-                // CORREÇÃO #7: Incluir token de autenticação
                 const response = await fetch(`${API_BASE}/comprar-viagem`, {
                     method: 'POST',
-                    headers: getHeaders(true),  // true = incluir Authorization header
+                    headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(payload)
                 });
 
@@ -651,13 +642,6 @@
             const telefone = document.getElementById('telefoneRecibo').value.trim();
             const email = document.getElementById('emailRecibo').value.trim();
 
-            // CORREÇÃO #7: Verificar autenticação
-            if (!authToken) {
-                result.innerHTML = '<div class="result error">❌ ERRO: Você precisa fazer login para gerar recibos!<br>' +
-                                   '<small>Este endpoint agora requer autenticação (auth:sanctum)</small></div>';
-                return;
-            }
-
             if (!codViagem) {
                 result.innerHTML = '<div class="result error">❌ ERRO: Informe o código da viagem</div>';
                 return;
@@ -671,10 +655,9 @@
             result.innerHTML = '⏳ Gerando recibo e enviando por WhatsApp...';
 
             try {
-                // CORREÇÃO #7: Incluir token de autenticação
                 const response = await fetch(`${API_BASE}/gerar-recibo`, {
                     method: 'POST',
-                    headers: getHeaders(true),  // true = incluir Authorization header
+                    headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
                         cod_viagem: codViagem,
                         telefone: telefone,
